--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hultagram</title>
+    
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <!-- Custom styles -->
+    
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('index') }}">
-                <image src="{{ url_for('static', filename='logo.png') }}" alt="Hultagram" height="30">
+                <img src="{{ url_for('static', filename='logo.png') }}" alt="Hultagram" height="30">
             </a>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
